buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://maven.eveoh.nl/content/repositories/releases"
        }
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE"
        classpath "se.transmode.gradle:gradle-docker:1.2"
        classpath "org.codehaus.groovy:groovy-all:2.3.6"
    }
}

allprojects {

    apply plugin: "java"
    apply plugin: "eclipse"
    apply plugin: "idea"
    apply plugin: "docker"
    apply plugin: "spring-boot"
    apply plugin: 'application'

// apply plugin: "scala"

    jar {

        version = "0.1"
    }

    repositories {
        mavenCentral()
    }

    project.ext {
        aspectjVersion = "1.8.7"
    }

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    ext {
        jacksonVersion = "1.9.13"
        jackson2Version = "2.3.2"
        bouncycastleVersion = "1.53"
        esperVersion = "5.3.0"
        tikaVersion = "1.11"
        httpcomponentsHttpclientVersion = "4.5.1"
        springIntegrationVersion = "4.2.2.RELEASE"
    }

    dependencies {
        compile "org.springframework.boot:spring-boot-starter-amqp"
        compile "org.springframework.amqp:spring-rabbit"
        compile "org.springframework.amqp:spring-amqp" 
        compile "org.projectreactor:reactor-net:1.1.6.RELEASE"
        compile "org.projectreactor.spring:reactor-spring-context:1.1.3.RELEASE"
        compile "com.jayway.jsonpath:json-path:2.0.0"

        compile "org.apache.commons:commons-lang3:3.4"
        compile "commons-io:commons-io:2.4"

        // compile "org.scala-lang:scala-library:2.11.7"
        // compile "org.scala-lang:scala-compiler:2.11.7"

        compile "com.thoughtworks.xstream:xstream:1.4.8"
        compile "org.codehaus.jettison:jettison:1.3.7"

        compile "org.codehaus.jackson:jackson-core-asl:$jacksonVersion"
        compile "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
        compile "com.fasterxml.jackson.core:jackson-core:$jackson2Version"
        compile "com.fasterxml.jackson.core:jackson-databind:$jackson2Version"

        compile "com.google.code.gson:gson:2.5"
        compile "com.google.guava:guava:18.0"

        testCompile "junit:junit"
        testCompile "org.springframework.boot:spring-boot-starter-test"

    }

    task wrapper(type: Wrapper) {
        gradleVersion = "2.8"
    }

    // applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
}

project(":application") {

}
// datadiode
project(":application:datadiode") {
    dependencies {
        compile project(':application')
    }
}
project(":application:datadiode:black") {
    apply plugin: "docker"
    dependencies {
        compile project(':application:datadiode')
        compile project(':application:datadiode:encryption:encrypt')
        compile project(':application:datadiode:cutter:cut')
        compile project(':application:datadiode:udp:external')

    }
    bootRun {
        // mainClass = "org.application.rabbitmq.datadiode.DatadiodeBlackStarter"
        main = "org.application.rabbitmq.datadiode.DatadiodeBlackStarter"
        jvmArgs = ["-d64", "-Xmx8g", "-XX:+PrintGCTimeStamps", "-verbose:gc"]
    }

   
}
project(":application:datadiode:red") {
    dependencies {
        compile project(':application:datadiode')
        compile project(':application:datadiode:encryption:decrypt')
        compile project(':application:datadiode:cutter:merge')
        
        // use the dedicated c version without packet loss
        // compile project(':application:datadiode:udp:internal')
    }
    // springBoot { mainClass = "org.application.rabbitmq.datadiode.DatadiodeRedStarter" }

    bootRun {
        main = "org.application.rabbitmq.datadiode.DatadiodeRedStarter"
        jvmArgs = ["-d64", "-Xmx8g", "-XX:+PrintGCTimeStamps", "-verbose:gc"]
    }

}

// encryption
project(":application:datadiode:encryption") {
    dependencies {
        compile project(':application:datadiode')
        compile project(':library:encryption')
    }
}
project(":application:datadiode:encryption:encrypt") {
    dependencies {
        compile project(':application:datadiode:encryption')
    }
    springBoot {
        mainClass = "org.encryption.encrypt.EncryptionEncryptStarter"
    }
}
project(":application:datadiode:encryption:decrypt") {
    dependencies {
        compile project(':application:datadiode:encryption')
    }
    springBoot {
        mainClass = "org.encryption.decrypt.EncryptionDecryptStarter"
    }
}

// cutter
project(":application:datadiode:cutter") {
    dependencies {
        compile project(':application:datadiode')
    }
}
project(":application:datadiode:cutter:cut") {
    dependencies {
        compile project(':application:datadiode:cutter')
    }
    springBoot {
        mainClass = "org.application.rabbitmq.cutter.cut.CutterCutStarter"
    }
}
project(":application:datadiode:cutter:merge") {
    dependencies {
        compile project(':application:datadiode:cutter')
    }
    springBoot {
        mainClass = "org.application.rabbitmq.cutter.merge.SplitterMergeStarter"
    }
}

// udp
project(":application:datadiode:udp") {
    dependencies {
        compile project(':application:datadiode')
        // compile "org.springframework.integration:spring-integration-ip:$springIntegrationVersion"
        // compile "org.springframework.integration:spring-integration-kafka:1.3.0.RELEASE"
        compile "org.springframework.integration:spring-integration-ip:$springIntegrationVersion"
    }
    springBoot {
        mainClass = "org.udp.server.rabbitmq.RabbitServer"
    }
    task runServer(type: JavaExec) {
        classpath = sourceSets.main.runtimeClasspath
        main = 'org.udp.server.fast.Server'
        args ''
    }
    task runRabbitServer(type: JavaExec) {
        classpath = sourceSets.main.runtimeClasspath
        main = 'org.udp.server.rabbitmq.RabbitServer'
        args ''
    }
    task runFastRabbitServer(type: JavaExec) {
        classpath = sourceSets.main.runtimeClasspath
        main = 'org.udp.server.rabbitmq.FastRabbitServer'
        jvmArgs "-d64", "-Xmx8g", "-XX:+PrintGCTimeStamps", "-verbose:gc"
        args ""
    }
    task runClient(type: JavaExec) {
        classpath = sourceSets.main.runtimeClasspath
        main = 'org.udp.client.fast.Client'
        args ''
    }
}
project(":application:datadiode:udp:external") {
    dependencies {
        compile project(':application:datadiode:udp')
    }
    springBoot {
        mainClass = "org.application.rabbitmq.datadiode.udp.external.UdpExternalStarter"
    }
}
project(":application:datadiode:udp:internal") {
    dependencies {
        compile project(':application:datadiode:udp')
    }
    springBoot {
        mainClass = "org.application.rabbitmq.datadiode.udp.internal.UdpInternalStarter"
    }
}

// search
project(":application:search") {
    dependencies {
        compile project(':application')
    }
}
project(":application:search:producer") {
    dependencies {
        compile project(':application:search')

        compile "com.google.http-client:google-http-client:1.21.0"
        compile "org.apache.httpcomponents:httpclient:$httpcomponentsHttpclientVersion"
    }
    springBoot {
        mainClass = "org.search.producer.SearchProducerStarter"
    }
}
project(":application:search:consumer") {
    dependencies {
        compile project(':application:search')

        compile "org.apache.tika:tika-core:$tikaVersion"
        compile "org.apache.tika:tika-parsers:$tikaVersion"
        compile "org.apache.tika:tika-xmp:$tikaVersion"
        compile "org.apache.tika:tika-java7:$tikaVersion"
        compile "org.apache.tika:tika-serialization:$tikaVersion"
        compile "org.apache.tika:tika-translate:$tikaVersion"
        compile "org.apache.tika:tika:$tikaVersion"

        compile group: 'org.bytedeco', name: 'javacv', version: '1.1'

        compile "com.sksamuel.scrimage:scrimage-core_2.11:2.1.0"
        compile "com.sksamuel.scrimage:scrimage-io-extra_2.11:2.1.0"
        compile "com.sksamuel.scrimage:scrimage-filters_2.11:2.1.0"

        // compile 'com.github.jai-imageio:jai-imageio-core:1.3.1'

        compile "com.twelvemonkeys.imageio:imageio:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-core:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-jpeg:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-tiff:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-metadata:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-tiff:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-psd:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-bmp:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-pdf:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-thumbsdb:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-iff:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-icns:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-sgi:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-pcx:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-pict:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-pnm:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-tga:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-batik:3.2.1"

        compile "com.twelvemonkeys.imageio:imageio-clippath:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-hdr:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-jmagick:3.2.1"
        compile "com.twelvemonkeys.imageio:imageio-ico:3.2.1"


    }
    springBoot {
        mainClass = "org.search.consumer.SearchConsumerStarter"
    }
}

// search
project(":application:fileshare") {
    dependencies {
        compile project(':application')
    }
}
project(":application:fileshare:external") {
    dependencies {
        compile project(':application:fileshare')
        compile "org.springframework.integration:spring-integration-core:$springIntegrationVersion"
        // compile 'org.springframework.integration:spring-integration-flow:1.0.0.RELEASE'
        compile 'org.springframework.integration:spring-integration-java-dsl:1.1.1.RELEASE'


    }
    springBoot {
        mainClass = "org.search.producer.SearchProducerStarter"
    }
}
project(":application:fileshare:internal") {
    dependencies {
        compile project(':application:fileshare')
    }
    springBoot {
        mainClass = "org.search.consumer.SearchConsumerStarter"
    }
}

// sensor
project(":application:sensor") {
    dependencies {
        compile project(':application')

    }
}
// temperature
project(":application:sensor:temperature") {
    dependencies {
        compile project(':application:sensor')
    }
    springBoot {
        mainClass = "org.application.rabbitmq.splitter.split.SplitterSplitStarter"
    }
}
// temperature sender
project(":application:sensor:temperature:sender") {
    dependencies {
        compile project(':application:sensor:temperature')
    }
    springBoot {
        mainClass = "org.application.rabbitmq.splitter.split.SplitterSplitStarter"
    }
}
// temperature receiver
project(":application:sensor:temperature:receiver") {
    dependencies {
        compile project(':application:sensor:temperature')
    }
    springBoot {
        mainClass = "org.application.rabbitmq.splitter.split.SplitterSplitStarter"
    }
}

// library
project(":library") {

}
project(":library:encryption") {
    dependencies {
        compile project(':library')
        compile "org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion"
        compile "org.bouncycastle:bcpg-jdk15on:$bouncycastleVersion"
    }
}

project(":library:encryption:encrypt") {
    dependencies {
        compile project(':library:encryption')
    }
}
project(":library:encryption:decrypt") {
    dependencies {
        compile project(':library:encryption')
    }
}
project(":library:esper") {
    dependencies {
        compile project(':library')
        compile "com.espertech:esper:$esperVersion"
        compile "com.espertech:esperio-amqp:$esperVersion"
        compile "com.espertech:esperio-db:$esperVersion"
        compile "com.espertech:esperio-csv:$esperVersion"
        compile "com.espertech:esperio-stax:$esperVersion"
        compile "com.espertech:esperio-springjms:$esperVersion"
        compile "com.espertech:esperio-http:$esperVersion"
        compile "com.espertech:esperio-socket:$esperVersion"
    }
}

